stable scorex initialisation, genesis block error via constructNewBlock